# Ray_tracing

./: CMakeLists.txt  Figure.hpp  Figure_Factory.hpp  File_work.cpp  Light.hpp  Material.hpp  README.md  Ray.hpp  Vec3d.cpp  Vec3d.hpp  head.hpp  main.cpp  o.txt  p.txt  render.cpp
